# tidysql

./: Cargo.toml  README.md  deny.toml
.github/actions/web-build/: action.yml
.github/workflows/: pages.yml  pr-check.yml
crates/tidysql/: Cargo.toml
crates/tidysql-config/: Cargo.toml
crates/tidysql-config/src/: lib.rs
crates/tidysql-formatter/: Cargo.toml
crates/tidysql-formatter/src/: lib.rs
crates/tidysql-lints/: Cargo.toml
crates/tidysql-lints/src/: disallow_names.rs  explicit_union.rs  inconsistent_capitalisation.rs  keyword_case.rs  lib.rs
crates/tidysql-lints/tests/: disallow_names.toml  explicit_union.toml  inconsistent_capitalisation.toml  keyword_case.toml  lint_suites.rs
crates/tidysql-syntax/: Cargo.toml
crates/tidysql-syntax/src/: lib.rs
crates/tidysql-wasm/: Cargo.toml
crates/tidysql-wasm/src/: lib.rs
crates/tidysql/src/: lib.rs  lsp.rs  main.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: ErrorBoundary.tsx
web/src/hooks/: useTidysqlWorkspace.ts
web/src/utils/: config.ts  idle.ts
