[package]
name = "tidysql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tidysql-formatter = { workspace = true }
tidysql-lints = { workspace = true }
tidysql-syntax = { workspace = true }
tidysql-config = { workspace = true }
clap = { workspace = true }
annotate-snippets = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
